@@ -319,6 +319,7 @@ cache_help_output :: Cache help output when freezing command.
 default_help_order :: Support overriding order of help sections for all commands.
 help_examples :: Allow including example help output with command usage.
 usages :: Get a hash with help output for all commands/subcommands for the processor.
+wrap_options_separator :: Add wrap method to options parser, for wrapping long separator lines
 
 = Examples
 
