@@ -1,5 +1,7 @@
 === master
 
+* Move option parser wrap method to wrapped_options_separator plugin (jeremyevans)
+
 * Move help output caching to cache_help_output plugin (jeremyevans)
 
 * Add default_help_order plugin to override the default order of help sections for all commands (jeremyevans)
